<resources>
    <string name="app_name">Map My Farm</string>
    <string name="confirm">Confirm</string>
    <string name="number_prompt">Mobile Number</string>
    <string name="verification_code">Verification Code</string>
    <string name="type_verification">Please enter the verification code sent to</string>
    <string name="hidden_num">+xxxxxxxxxxxx</string>
    <string name="initial_attempts">3</string>
    <string name="attempts">attempts remaining</string>
    <string name="edit_number">Edit Number</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="wrong_otp">Wrong OTP</string>
    <string name="otp_sent">OTP Sent</string>
    <string name="otp_sent_error">Unable to send OTP</string>
    <string name="save">Save</string>
    <string name="first_name_req">First Name*</string>
    <string name="first_name">First Name</string>
    <string name="last_name_req">Last Name*</string>
    <string name="locale_req">Village/City*</string>
    <string name="district_req">District*</string>
    <string name="email_opt">Email (Optional)</string>
    <string name="state_req">State*</string>
    <string name="empty_field">This field can\'t be empty</string>
    <string name="empty_message">No farms have been added</string>
    <string name="add_farm">Add Farm</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>
    <string name="farm_id">Farm ID:</string>
    <string name="crop">Crop:</string>
    <string name="area">Area:</string>
    <string name="sq_m">acres</string>
    <string name="date">Date:</string>
    <string name="sow_date">Sow Date:</string>
    <string name="title_activity_trace_farm">Map</string>
    <string name="logout">Logout</string>
    <string name="ok">OK</string>
    <string name="about_content">A detailed description will be given here</string>
    <string name="refresh">Refresh</string>
    <string name="view_farm">View Farm</string>
    <string name="harvest_product">Harvest Product:</string>
    <string name="mapmyfarm">MapMyFarm</string>
    <string name="email_not_valid">Email is not valid</string>
    <string name="err_saving_details">Error saving details</string>
    <string name="mapmyfarm_contact">tel:+918374474447</string>
    <string name="cancel">Cancel</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile">Profile</string>
    <string name="delete_harvest">Delete Harvest</string>
</resources>
