<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:icon="@drawable/profile_picture"
        android:title="@string/profile"
        app:showAsAction="ifRoom"
        >
        <menu>
            <item
                android:id="@+id/action_edit_details"
                android:orderInCategory="101"
                android:title="@string/edit_profile"
                app:showAsAction="never"
                />

            <item
                android:id="@+id/action_logout"
                android:orderInCategory="102"
                android:title="@string/logout"
                app:showAsAction="never"/>


        </menu>
    </item>

    <item
        android:id="@+id/action_contact"
        android:icon="@drawable/ic_phone"
        android:orderInCategory="103"
        android:title="@string/contact"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="104"
        android:title="@string/refresh"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="105"
        android:title="@string/about"
        app:showAsAction="never"/>


</menu>