<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GetUserDetails">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/user_details_save"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name_req"
                app:hintEnabled="true"
                android:id="@+id/first_name_input"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name_req"
                app:hintEnabled="true"
                android:id="@+id/last_name_input"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/locale_req"
                android:id="@+id/locale_input"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/district_req"
                android:id="@+id/district_input"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/state_req"
                android:id="@+id/state_input"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_opt"
                android:id="@+id/email_input"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/black"
                    />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>



    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_details_save"
        android:text="@string/save"
        android:textAllCaps="false"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.eyalbira.loadingdots.LoadingDots
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/details_save_loadingdots"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@+id/user_details_save"
        app:layout_constraintBottom_toBottomOf="@+id/user_details_save"
        app:layout_constraintStart_toStartOf="@id/user_details_save"
        app:layout_constraintEnd_toEndOf="@id/user_details_save"
        app:LoadingDots_dots_color="@android:color/white"
        app:LoadingDots_auto_play="true"
        app:LoadingDots_dots_count="4"
        app:LoadingDots_dots_size="5dp"
        app:LoadingDots_dots_space="4dp"
        android:elevation="6dp"

        app:LoadingDots_loop_duration="800"
        app:LoadingDots_loop_start_delay="100"

        app:LoadingDots_jump_duration="200"
        app:LoadingDots_jump_height="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>